--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-fastapi==0.115.0
-uvicorn==0.30.1
-pydantic==2.9.2
+# fastapi==0.115.0
+# uvicorn==0.30.1
+# pydantic==2.9.2
+
+requests
+psycopg2-binary
+mysql-connector-python
